...

    @available(*, unavailable)
    required init?(coder: NSCoder) { fatalError("Code-only Document reading split") }

    override func viewDidLoad() {
        super.viewDidLoad()
        splitView.identifier = .init("scholium.documentReadingSplit")
        splitView.setAccessibilityIdentifier("scholium.documentReadingSplit")
        splitView.isVertical = true
        splitView.dividerStyle = .thin

        documentItem = NSSplitViewItem(viewController: documentController)
        documentItem.canCollapse = false
...
